add page styling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <meta charset=="UTF"> 
+        <meta charset="UTF-8"> 
         <title>andres r. gutierrez</title>
         <link rel="stylesheet" href="style.css">
 
@@ -12,15 +12,36 @@
     <body>
 
         <div class="box">
-            <div class="slot" id="cap">
-                header
+            <div class="cell cap" id="header">
+                <ul class="horizontal">
+                    <li>me</li>
+                    <li>who</li>
+                </ul>
+                <ul class="horizontal">
+                    <li class="circ-outline">
+                        <a href="https://www.linkedin.com/in/andres-roman-gutierrez/" target="_blank">
+                            <img src="page-assets/linkedin-logo.png">
+                        </a>
+                    </li>
+                    <li class="circ-outline">
+                        <a href="https://github.com/axndyg" target="_blank">
+                            <img src="page-assets/github-logo.png">
+                        </a>
+                    </li>
+                    <li class="circ-outline">
+                        <a href="mailto:axndy.g@gmail.com" target="_blank">
+                          <img src="page-assets/email-logo.png">
+                        </a>
+                    </li>
+                </ul>
+              
             </div>
 
-            <div class="slot" id="content">
+            <div class="cell" id="content">
                 Here you can mark up content
             </div>
 
-            <div class="slot" id="cap">
+            <div class="cell cap" id="footer">
                 <span>andres r. gutierrez </span>
                 <span>hosted @ github  </span>
                 
