polish page skeleton and manage assets

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 
         <div class="box">
             <div class="cell cap" id="header">
-                <ul class="horizontal">
-                    <li>me</li>
-                    <li>who</li>
+                <ul class="horizontal text">
+                    <li>andres r. gutierrez</li>
+                    <li><a href="page-assets/resumes/andres-gutierrez-resume-081525.pdf" target="_blank">resume</a></li>
                 </ul>
                 <ul class="horizontal">
                     <li class="circ-outline">
                         <a href="https://www.linkedin.com/in/andres-roman-gutierrez/" target="_blank">
-                            <img src="page-assets/linkedin-logo.png">
+                            <img src="page-assets/logos/linkedin-logo.png">
                         </a>
                     </li>
                     <li class="circ-outline">
                         <a href="https://github.com/axndyg" target="_blank">
-                            <img src="page-assets/github-logo.png">
+                            <img src="page-assets/logos/github-logo.png">
                         </a>
                     </li>
                     <li class="circ-outline">
                         <a href="mailto:axndy.g@gmail.com" target="_blank">
-                          <img src="page-assets/email-logo.png">
+                          <img src="page-assets/logos/email-logo.png">
                         </a>
                     </li>
                 </ul>
@@ -38,7 +38,41 @@
             </div>
 
             <div class="cell" id="content">
-                Here you can mark up content
+                <div class="content-cell" id="bio">
+                    <h3>about me</h3>
+                    <hr class="content-line"> 
+                    yooo
+                </div>
+                <div class="content-cell" id="education">
+                    <h3>my education</h3>
+                    <hr class="content-line">
+                    hey hey
+                </div>
+                <div class="content-cell" id="work-history">
+                    <h3>experience</h3>
+                    <hr class="content-line"> 
+                    hey hey
+                </div>
+                <div class="content-cell" id="projects">
+                    <h3>projects</h3>
+                    <hr class="content-line"> 
+                    hey hey
+                </div>
+                <div class="content-cell" id="achievements">
+                    <h3>achievements</h3>
+                    <hr class="content-line"> 
+                    hey hey
+                </div>
+                <div class="content-cell" id="tools">
+                    <h3>tools</h3>
+                    <hr class="content-line"> 
+                    hey hey
+                </div>
+                    <div class="content-cell" id="gallery">
+                    <h3>gallery</h3>
+                    <hr class="content-line"> 
+                    hey hey
+                </div>
             </div>
 
             <div class="cell cap" id="footer">
