establish gallery functionality

--- a/index.html
+++ b/index.html
@@ -71,7 +71,46 @@
                     <div class="content-cell" id="gallery">
                     <h3>gallery</h3>
                     <hr class="content-line"> 
-                    hey hey
+                    <div class="gallery">
+                        <div class="image-block" id="image_01">
+                            <div class="image-left">blank</div>
+                            <div class="image-right">text</div>
+                        </div>
+                        <div class="image-block" id="image_02">
+                            <div class="image-left">blank</div>
+                            <div class="image-right">text</div>
+                        </div>
+                        <div class="image-block" id="image_03">
+                            <div class="image-left">blank</div>
+                            <div class="image-right">text</div>
+                        </div>
+                        <div class="image-block" id="image_04">
+                            <div class="image-left">blank</div>
+                            <div class="image-right">text</div>
+                        </div>
+                        <div class="image-block" id="image_05">
+                            <div class="image-left">blank</div>
+                            <div class="image-right">text</div>
+                        </div>
+                        <div class="image-block" id="image_05">
+                            <div class="image-left">blank</div>
+                            <div class="image-right">text</div>
+                        </div>
+                        <div class="image-block" id="image_05">
+                            <div class="image-left">blank</div>
+                            <div class="image-right">text</div>
+                        </div>
+                        <div class="image-block" id="image_05">
+                            <div class="image-left">blank</div>
+                            <div class="image-right">text</div>
+                        </div>
+                        <div class="image-block" id="image_05">
+                            <div class="image-left">blank</div>
+                            <div class="image-right">text</div>
+                        </div>
+                        
+                    </div>
+
                 </div>
             </div>
 
